<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionOne"
            android:textSize="20sp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionTwo"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radioButtonOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionThree"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/radioButtonOption4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionFour"
            android:textSize="20sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonSendRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_request"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/myScrollableTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="normal"
            android:fontFamily="monospace"
            android:text="" />
    </ScrollView>

</LinearLayout>